--- a/package.json
+++ b/package.json
@@ -13,21 +13,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/forms": "~8.1.2",
-    "@angular/platform-browser": "~8.1.2",
-    "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/common": "~9.1.9",
+    "@angular/compiler": "~9.1.9",
+    "@angular/core": "~9.1.9",
+    "@angular/forms": "~9.1.9",
+    "@angular/platform-browser": "~9.1.9",
+    "@angular/platform-browser-dynamic": "~9.1.9",
+    "@angular/router": "~9.1.9",
+    "@capacitor/android": "^2.1.2",
     "@capacitor/core": "2.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.26.0",
     "@ionic-native/in-app-browser": "^5.26.0",
     "@ionic-native/screen-orientation": "^5.15.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "cordova-android": "8.1.0",
+    "cordova-plugin-advanced-http": "^2.4.1",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "core-js": "^2.5.4",
@@ -35,17 +39,16 @@
     "ionic": "^5.4.16",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
     "@angular-devkit/build-angular": "^0.901.7",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
-    "@angular/cli": "~8.1.2",
-    "@angular/compiler": "~8.1.2",
+    "@angular/cli": "^9.1.7",
     "@angular/compiler-cli": "^9.1.9",
-    "@angular/language-service": "~8.1.2",
+    "@angular/language-service": "~9.1.9",
     "@capacitor/cli": "2.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
@@ -68,7 +71,7 @@
     "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.8.3"
   },
   "description": "An Ionic project",
   "cordova": {
