--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -22,6 +22,7 @@
     }
   },
   "server": {
-    "url": "http://192.168.1.106:8100"
+    "url": "http://192.168.1.106:8100",
+    "originalUrl": "http://192.168.1.106:8100"
   }
 }
