--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/http": "^5.26.0",
     "@ionic-native/in-app-browser": "^5.26.0",
     "@ionic-native/screen-orientation": "^5.15.0",
+    "@ionic-native/speech-recognition": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
@@ -34,6 +35,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
+    "cordova-plugin-speechrecognition": "^1.2.0",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "ionic": "^5.4.16",
