--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -10,6 +10,7 @@ android {
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
 
+    implementation "com.google.android.gms:play-services-ads:19.0.1"
     implementation "com.squareup.okhttp3:okhttp-urlconnection:3.10.0"
 }
 
