--- a/package.json
+++ b/package.json
@@ -22,18 +22,24 @@
     "@angular/router": "~9.1.9",
     "@capacitor/android": "^2.1.2",
     "@capacitor/core": "2.1.2",
+    "@ionic-native/admob-plus": "^5.26.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.26.0",
     "@ionic-native/in-app-browser": "^5.26.0",
+    "@ionic-native/insomnia": "^5.26.0",
+    "@ionic-native/network": "^5.26.0",
     "@ionic-native/screen-orientation": "^5.15.0",
     "@ionic-native/speech-recognition": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-admob-plus": "^0.36.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
+    "cordova-plugin-insomnia": "^4.3.0",
+    "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-speechrecognition": "^1.2.0",
     "core-js": "^2.5.4",
