--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "@capacitor/android": "^2.1.2",
-    "@capacitor/core": "2.1.2",
-    "@ionic-native/admob-plus": "^5.26.0",
+    "@capacitor/android": "^2.0.0-beta.1",
+    "@capacitor/core": "^2.0.0-beta.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.26.0",
     "@ionic-native/in-app-browser": "^5.26.0",
@@ -33,7 +32,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
-    "cordova-admob-plus": "^0.36.0",
+    "capacitor-admob": "^0.1.0",
+    "cordova-admob-sdk": "^0.24.1",
     "cordova-android": "8.1.0",
     "cordova-plugin-advanced-http": "^2.4.1",
     "cordova-plugin-file": "^6.0.2",
@@ -42,9 +42,11 @@
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-speechrecognition": "^1.2.0",
+    "cordova-promise-polyfill": "0.0.2",
     "core-js": "^2.5.4",
     "es6-promise-plugin": "^4.2.2",
     "ionic": "^5.4.16",
+    "jetifier": "^1.6.6",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.10.3"
